--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ base64 = "0.21.5"
 serde_json = "1.0.107"
 atty = "0.2.14"
 qr2term = "0.3.1"
+mysql_async = "0.32.0"
 self_update = { version = "0.37.0", default-features = false, features = ["archive-zip", "archive-tar", "compression-flate2", "compression-zip-deflate"] }
 
 # TLS server support
