--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ url = "2.4.0"
 zip = { version = "0.6.4", default-features = false }
 base64 = "0.21.5"
 serde_json = "1.0.107"
+chrono = { version = "0.4", features = ["serde"] }
 atty = "0.2.14"
 qr2term = "0.3.1"
 self_update = { version = "0.37.0", default-features = false, features = ["archive-zip", "archive-tar", "compression-flate2", "compression-zip-deflate"] }
